--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   </div>
 
-  <!-- <script src="js/test.js" charset="utf-8"></script> -->
-  <script src="js/script.js" charset="utf-8"></script>
+  <script src="js/test.js" charset="utf-8"></script>
+  <!-- <script src="js/script.js" charset="utf-8"></script> -->
 </body>
 </html>
